ZezeJava: 补充几处try释放资源; 修正RocksDatabase.dropTable; 为一些ByteBuffer.Allocate()指定比较合适的初始大小; 改进一些细节; 修正警告